<resources>
    <string name="app_name">帖卡小助手</string>
    <!--权限请求-->
    <string name="permissions_fail">您之前拒绝了部分权限，请允许权限以保障功能运行</string>
    <!--网络请求-->
    <string name="default_error_request">获取数据失败</string>
    <!--main-->
    <string name="main_text_deliver_goods">送货</string>
    <string name="main_text_check_goods">盘点</string>
    <string name="main_text_pick_goods">领料</string>
    <string name="main_text_search_goods">查询</string>
    <string name="main_text_deliver_goods_old">设备贴卡</string>
    <string name="main_text_check_goods_old">库存盘点</string>
    <string name="main_text_pick_goods_old">设备上架</string>
    <string name="main_text_search_goods_old">领料扫码</string>
    <!--scan-->
    <string name="scan_fail">扫描失败，请重新扫描</string>
    <string name="scan_recognition_fail">识别失败，请重新识别</string>
    <string name="scan_success">扫描成功</string>
    <string name="scan_pick_hint">请扫描屏幕上方领料单二维码</string>
    <string name="scan_check_hint">请扫描屏幕上方盘点单二维码</string>
    <!--setting-->
    <string name="setting_server">服务器设置：</string>
    <string name="setting_port">端口：</string>
    <string name="setting_lessee">租户：</string>
    <string name="setting_warehouse">仓库：</string>
    <string name="setting_lessee_hint">请选择租户</string>
    <string name="setting_warehouse_hint">请选择仓库</string>
    <string name="setting_device">上位机类型：</string>
    <string name="setting_device_new">新版上位机</string>
    <string name="setting_device_old">旧版上位机</string>
    <string name="setting_save">保存</string>
    <string name="setting_connection">获取</string>
    <string name="setting_warning">还没保存仓库信息，是否确定退出</string>
    <string name="setting_agree">确认</string>
    <string name="setting_dailog_title">警告</string>
    <string name="setting_no_choose_device">请选择手持枪类型</string>
    <string name="setting_fail_lessess_dialog">请按获取按钮，获取租户列表</string>
    <string name="setting_fail_house_dialog">请先获取租户列表再选择仓库</string>
    <string name="setting_save_progress_title">获取仓库数据中</string>
    <!--main-->
    <string name="no_find_store_house_data">没有查找到仓库数据，请设置仓库再进行操作</string>
    <string name="no_connect">当前网络不可用，请检查网络情况</string>
    <string name="main_progress_title">获取数据中</string>
    <string name="main_progress_content">请稍候...</string>
    <string name="main_progress_post_title">上传数据中</string>
    <string name="main_cancel">取消</string>
    <string name="main_exit_toast">再按一次退出</string>
    <!--tts-->
    <string name="tts_no_support">不支持当前语言</string>
    <string name="tts_init_fail">语音初始化失败</string>
    <!--deliver-->
    <string name="device_post_warehouse">库存贴卡</string>
    <string name="device_post_manage">贴卡管理</string>
    <string name="device_post_deliver">到货贴卡</string>
    <string name="deliver_post_card_search_text">输入订购单号或合同编号或供应商名称或设备编号或设备名称或经办人</string>
    <string name="deliver_place_shelves_search_text">输入RFID或品牌或型号</string>
    <string name="deliver_item_suplier">供应商：</string>
    <string name="deliver_item_device_code">设备编号：</string>
    <string name="empty_view_hint_text">暂无数据，请重新刷新</string>
    <string name="post_rfid_card_num_hint">请输入数量</string>
    <string name="post_rfid_card_scaning">正在扫描中，请稍等</string>
    <string name="post_rfid_card_initing">正在初始中，请稍等</string>
    <string name="post_rfid_card_submiting">正在提交中，请稍等</string>
    <!--search-->
    <string name="search_empty_content">请输入搜索内容</string>
    <string name="search_delete_agree_btn">确定</string>
    <string name="search_delete_hint_content">确定删除历史记录？</string>
    <string name="btn_post_rfid_card">提交</string>
    <!--rifd-->
    <string name="rfid_init_fail">模块不存在</string>
    <!--pick-->
    <string name="pick_item_rfid_code_text">Rfid码：</string>
    <string name="pick_item_device_post_text">扫码领料</string>
    <string name="pick_item_store_text">存放位置：</string>
    <!--check-->
    <string name="check_btn_manual_text">人工盘点</string>
    <string name="check_btn_auto_text">自动盘点</string>
    <string name="check_btn_stop_auto_text">停止自动盘点</string>
    <string name="check_start_manual_check">进行人工盘点</string>
    <string name="check_item_rfid_text">Rfid码：</string>
    <string name="check_item_device_factnum">实际数量：</string>
    <string name="check_btn_check_text">盘点</string>
    <string name="check_manual_dailog_content">确定盘点完毕？</string>
    <string name="check_auto_finish">自动盘点完毕</string>
    <!--update-->
    <string name="update_alert_title">更新内容</string>
    <string name="update_progress_title">下载更新</string>
    <string name="update_progress_content">下载中...</string>
    <string name="update_alert_install_title">安装</string>
    <string name="update_alert_install_content">是否安装？</string>
    <string name="update_download_fail">下载失败</string>
</resources>
